# practice

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  Implementation Plan.md  README.md  crystal.conf.example  install-deps.sh  roadmap.md  test_db_cli.sh  test_output.txt  todo.md
include/: control.h  join.h  load.h  pred.h  utils.h
include/app/: aplication.h
include/cli/: meta_command_handler.h  session_context.h  terminal_app.h
include/core/: catalog_cache.h  config.h  device_buffer.h  execution.h  expressions.h  inline_math.h  memory.h  operators.h  optimizer.h  optimizer_rules.h  translator.h  utils.h  visitor.h
include/crystal/: crystal.h  join.h  load.h  pred.h  utils.h
include/db/: database_instance.h  query_engine.h
olap_bench/: FEATURE_COVERAGE.md  README.md  manifest.json
olap_bench/sql/00_health/: health_01_count_lineorder.sql  health_05_count_ddate.sql
olap_bench/sql/01_scan_filter/: filter_01_eq.sql  filter_02_range.sql  filter_03_or.sql  filter_04_arithmetic.sql  filter_05_not_is_null.sql  filter_06_complex_boolean.sql
olap_bench/sql/02_projection/: proj_01_single_column.sql  proj_02_two_columns.sql  proj_03_arithmetic_expr.sql  proj_04_boolean_expr.sql  proj_05_select_star_small_dimension.sql
olap_bench/sql/03_aggregate_scalar/: agg_02_count_expr.sql  agg_03_sum_min_max.sql  agg_04_avg.sql  agg_05_all_basic_aggs.sql  agg_06_aggregate_expression.sql
olap_bench/sql/04_group_by/: group_01_year_sum.sql  group_02_year_brand_sum_q21_shape.sql  group_03_customer_nation_supplier_nation.sql  group_04_group_by_expression_future.sql
olap_bench/sql/05_join_pk_fk/: join_01_customer_filter.sql  join_02_supplier_filter.sql  join_03_part_filter.sql  join_04_date_filter.sql  join_05_four_table_count.sql
olap_bench/sql/06_projection_join/: proj_join_01_selected_columns.sql  proj_join_03_three_table_selected.sql  proj_join_04_expression_after_join.sql
olap_bench/sql/08_custom/: custom3.sql
olap_bench/sql/09_nullable/: nullable_agg.sql
olap_bench/sql/10_order_limit_topn_future/: topn_01_order_by_sum_desc_limit.sql  topn_02_order_by_projection.sql
olap_bench/sql/11_having_future/: having_01_sum_threshold.sql
olap_bench/sql/12_distinct_future/: distinct_01_single_column.sql  distinct_02_count_distinct.sql  distinct_03_multi_column.sql
olap_bench/sql/13_outer_join_future/: outer_01_left_join_customer.sql
olap_bench/sql/14_subquery_cte_future/: cte_01_basic.sql  subquery_01_derived_table.sql
olap_bench/sql/15_window_future/: window_01_row_number.sql  window_02_running_sum.sql
olap_bench/sql/16_case_future/: case_01_bucketed_sum.sql  case_02_conditional_sum.sql
olap_bench/sql/17_alias_selfjoin_future/: alias_01_self_join_customer_nation.sql  alias_02_table_column_aliases.sql
olap_bench/sql/18_mht_nonunique_future/: mht_01_non_unique_join_city.sql  mht_02_or_join_dedup.sql
olap_bench/sql/19_type_system_future/: types_01_decimal_avg.sql  types_02_date_extract.sql  types_03_string_like.sql
olap_bench/sql/20_memory_stress/: stress_01_wide_star_customer.sql  stress_02_wide_star_customer_supplier.sql
olap_bench/tools/: README.md  run_olap_bench.py  run_session_smoke.py
src/: main.cpp  q11.cpp  q23.cpp  q32.cpp  q34.cpp  q43.cpp
src/app/: application.cpp
src/cli/: meta_command_handler.cpp  terminal_app.cpp
src/core/: config.cpp  execution.cpp  optimizer.cpp  optimizer_rules.cpp  translator.cpp  visitor.cpp
src/db/: database_instance.cpp  query_engine.cpp
test/: q11.cpp  q12.cpp  q13.cpp  q21.cpp  q22.cpp  q23.cpp  q31.cpp  q32.cpp  q33.cpp  q34.cpp  q41.cpp  q42.cpp  q43.cpp  test_nullable_semantics.cpp  test_optimizer.cpp  test_sql_3vl.cpp  test_translator.cpp
test/example/: q11.cpp  q12.cpp  test21.cpp
test/nullable_data/: README.md  expected.tsv  nullable_numbers.csv  queries.sql  schema.sql
test/queries/example/: q41.cpp
test/queries/result/scale10/: 11.txt  12.txt  13.txt  21.txt  22.txt  23.txt  31.txt  32.txt  33.txt  34.txt  41.txt  42.txt  43.txt
test/queries/sql/: custom1.sql  custom2.sql  custom4.sql  custom5.sql  q42.sql
test/queries/sql/mht/: non_unique_projection.sql
test/queries/sql/nullable/: nullable_is_null.sql  nullable_where.sql  three_valued_logic.sql
